--- a/src/PingPong/Assets/SimpleTweetsPanel.xaml
+++ b/src/PingPong/Assets/SimpleTweetsPanel.xaml
@@ -1,17 +1,13 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:conv="clr-namespace:PingPong.Converters"
                     xmlns:ctrl="clr-namespace:PingPong.Controls"
                     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                     mc:Ignorable="d">
+    <conv:RelativeTimeConverter x:Key="RelativeTimeConverter" />
     <DataTemplate x:Key="SimpleTweetDataTemplate">
-        <Grid d:DataContext="{d:DesignData /SampleData/TweetSampleData.xaml}" d:DesignHeight="99" d:DesignWidth="304">
-            <Grid.Background>
-                <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
-                    <GradientStop Color="#11000000" />
-                    <GradientStop Offset="1" Color="#22000000" />
-                </LinearGradientBrush>
-            </Grid.Background>
+        <Grid Background="#FF111111" d:DesignHeight="99" d:DesignWidth="304">
             <Grid.RowDefinitions>
                 <RowDefinition />
                 <RowDefinition Height="Auto" />
@@ -20,26 +16,43 @@
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
-            <Image Width="48" Height="48" VerticalAlignment="Top" Source="{Binding ProfileImgUrl}" />
-            <ctrl:TweetTextBlock Grid.Column="1" FontFamily="{StaticResource DefaultFontFamily}" FontSize="12" Tweet="{Binding}" />
+            <Image Width="48"
+                   Height="48"
+                   Margin="5,5,0,0"
+                   VerticalAlignment="Top"
+                   Source="{Binding User.ProfileImageUrl}" />
+            <ctrl:TweetTextBlock Grid.Column="1"
+                                 FontFamily="{StaticResource DefaultFontFamily}"
+                                 FontSize="12"
+                                 Foreground="{StaticResource TweetTextBrush}"
+                                 Tweet="{Binding}" />
             <TextBlock Grid.Row="1"
                        Grid.ColumnSpan="2"
+                       Margin="5"
                        HorizontalAlignment="Right"
                        VerticalAlignment="Bottom"
                        FontFamily="{StaticResource DefaultFontFamily}"
                        FontSize="13.333"
-                       Foreground="BlueViolet"
-                       Text="{Binding ScreenName}" />
+                       Foreground="{StaticResource ScreenNameTextBrush}"
+                       Text="{Binding User.ScreenName}" />
             <TextBlock Grid.Row="1"
                        Grid.ColumnSpan="2"
+                       Margin="5"
                        HorizontalAlignment="Left"
                        VerticalAlignment="Bottom"
                        FontFamily="{StaticResource DefaultFontFamily}"
                        FontSize="9.333"
-                       Foreground="#FF003D8F"
-                       Text="{Binding CreatedAt}" />
-            <Border Grid.RowSpan="2" Grid.ColumnSpan="2" BorderBrush="#33000000" BorderThickness="0,0,0,1" />
-            <Border Grid.RowSpan="2" Grid.ColumnSpan="2" BorderBrush="#CCFFFFFF" BorderThickness="0,1,0,0" />
+                       Foreground="{StaticResource DateTextBrush}"
+                       Text="{Binding CreatedAt, Converter={StaticResource RelativeTimeConverter}}" />
+            <Border Grid.RowSpan="2" Grid.ColumnSpan="2">
+                <Border.Background>
+                    <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                        <GradientStop Color="#11FFFFFF" />
+                        <GradientStop Offset="1" Color="#22FFFFFF" />
+                    </LinearGradientBrush>
+                </Border.Background>
+            </Border>
+            <Border Grid.RowSpan="2" Grid.ColumnSpan="2" BorderBrush="#33FFFFFF" BorderThickness="1" />
         </Grid>
     </DataTemplate>
     <Style x:Key="SimpleTweetsPanel" TargetType="ItemsControl">
