--- a/src/PingPong/Assets/MetroTweetsPanel.xaml
+++ b/src/PingPong/Assets/MetroTweetsPanel.xaml
@@ -5,7 +5,7 @@
                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                     mc:Ignorable="d">
     <DataTemplate x:Key="MetroTweetDataTemplate">
-        <Grid Margin="5,0,5,10" d:DataContext="{d:DesignData /SampleData/TweetSampleData.xaml}" d:DesignHeight="120" d:DesignWidth="414">
+        <Grid Margin="5,0,5,10" d:DesignHeight="120" d:DesignWidth="414">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
